added a sponsors layout, still need a bit of work to get images and show them in a pretty grid

--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -31,5 +31,6 @@
 @import "pages/blogs";
 @import "pages/blog";
 @import "pages/team";
+@import "pages/sponsor";
 @import "pages/faq";
 @import "pages/code_of_conduct";
