--- a/layouts/shortcodes/sponsors.html
+++ b/layouts/shortcodes/sponsors.html
@@ -1,6 +1,6 @@
 {{ $_hugo_config := `{ "version": 1 }` }}
 {{ $site := .Site }}
 <section class="sponsor">
-	{{ range $site.Data.sponsors }}{{ partial "sponsor.html" . }}
+	{{ range sort $.Page.Params.sponsors "order" }}{{ partial "sponsor.html" . }}
 	{{ end }}
 </section>
