--- a/layouts/partials/sponsor.html
+++ b/layouts/partials/sponsor.html
@@ -1,3 +1,3 @@
 <div class="label">
-	<a target="_blank" rel="{{ .name }}" href="{{ .url }}">{{ partial "picture" (dict "img" .img  "alt" .name "class" "sponsor") }}</a>
+	<a target="_blank" rel="noopener" href="{{ .url }}">{{ partial "picture" (dict "img" .img  "alt" .name "class" "sponsor") }}</a>
 </div>
