yes i am breaking it on purpose;

--- a/src/styles/_root.scss
+++ b/src/styles/_root.scss
@@ -47,14 +47,14 @@
 
   /* Tags */
   /*from https://github.com/d3/d3-scale-chromatic#schemePastel2*/
-  --tag1: #b3e2cd;
-  --tag2: #fdcdac;
-  --tag3: #cbd5e8;
-  --tag4: #f4cae4;
-  --tag5: #e6f5c9;
-  --tag6: #fff2ae;
-  --tag7: #f1e2cc;
-  --tag8: #cccccc;
+  --tag1: ;//#b3e2cd;
+  --tag2: ;// #fdcdac;
+  --tag3: ;//#cbd5e8;
+  --tag4: ;//#f4cae4;
+  --tag5: ;//#e6f5c9;
+  --tag6: ;//#fff2ae;
+  --tag7: ;//#f1e2cc;
+  --tag8: ;//#cccccc;
 
   --native-mobile-apps: var(--tag2);
   --web: var(--tag6);
