--- a/src/styles/partials/_type.scss
+++ b/src/styles/partials/_type.scss
@@ -1,11 +1,11 @@
 
 
 .type-conference {
-  --duration: '40';
+  --duration: '40-45';
 }
 
 .type-quickie {
-  --duration: '15';
+  --duration: '20-25';
 }
 
 .type-keynote {
